add: Compatibility with 2.1 GMD files again
Change to the legacy version using the link in footer

--- a/index.html
+++ b/index.html
@@ -243,6 +243,9 @@
 	<footer class="footer">
 		<div class="content has-text-centered">
 			<p>
+				<p id = "legacy-ce-version-element">Use legacy version by clicking <a href="gdlevelconverter-web/?ce_legacy">here</a> (For 2.1 files).</p>
+			</p>
+			<p>
 				Level conversion tool written by <a href="https://xyze.dev">zmx</a>.
 				Page source and script licensed under the <a href="./LICENSE.txt">MIT license</a>.
 			</p>
